--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">//??????????????
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <color name="primaryColor">#4fc3f7</color>
+        <color name="primaryLightColor">#8bf6ff</color>
+        <color name="primaryDarkColor">#0093c4</color>
+        <color name="primaryTextColor">#000000</color>
     </style>
 
     <style name="AppTheme.NoActionBar">
